made another fix in package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "capStoneTenzies",
+  "name": "capstonetenzies",
   "homepage": "https://bellxalli.github.io/capStoneTenzies",
   "private": true,
   "version": "0.0.0",
